--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body{background-image: url(https://cdn.wonderfulengineering.com/wp-content/uploa
     margin-bottom: 50px;
 }
 
-.wrapper, .wrapper2{
+.wrapper, .wrapper2 {
     background: black;
     max-width: 960px;
     margin: 0 auto;
@@ -25,14 +25,13 @@ font-family: 'Pacifico';
 padding: 20px;
 text-align: center;
 width: 20%; 
-text-align: center;
 }
 
 .link{
     float: right;
     text-decoration: none;
     background: limegreen;
-    margin-right: 92px;
+    
 }
 
 h2{text-align: center;
@@ -68,12 +67,6 @@ img.home{ float: right;
 
 p#me, p#sport{
 text-indent: 50px;}
-
-
-.list{
-    margin-left: 20%;
-
-}
 
 .clearfix{
     clear: both;
@@ -123,35 +116,58 @@ input#text {
     padding: 20px;
     height: 100%;
   }
+.list{
+    margin-left: 200px;
+}
 
   footer{
       clear: both;
      text-align: center;
   }
-.pro{
-    float: left;
-    margin: 120px 120px;
-    height: 200px;
-    width: 200px;
+
+#UNLV, #family, #Hawaii {
+    margin: 20px 20px;
+    height: 25%;
+    width: 25%;
+
 
 }
 
+.pictures {
+    height: 100%;
+}
+
 @media (max-width: 980px){
-    .pro{
-        margin: 50px 50px;
-    
+    .link{
+        font-size: 18px;
+        margin-right: 4.5%;
     }
 
+    #name{
+        width: 30%;
+    }
     .wrapper2{
         font-size: 16px;
         line-height: -4
     }
 
+    .list{
+        margin-left: 200px;
+    }
+
+    input#submit{
+        width:75%;
+        margin-left:10%;
+    }
+
 }
 
 @media(max-width:768px){
-    .pro{
-        margin: 30px 30px;
+
+    .link{
+        padding: 10px;
+        font-size: 20px;
+        margin-right: 3%;
     }
 
     .wrapper2{
@@ -159,22 +175,49 @@ input#text {
         line-height: -1
     }
 
+    .list{
+        margin-left: 200px;
 
+    }
 
+    input#submit{
+        width:50%;
+        margin-left: 20%;
+    }
+
+    #name{
+        margin-left: 25%;
+        padding-left: 80px;
+        padding-right: 80px;
+        text-align: center;
+    }
     
 }
 
 @media (max-width:640px ){
-    .pro{
-        margin: 50px;
-        
+
+    .link{margin-right: 30%;
+        font-size: 23px;
+        padding: 17px;
     }
     .wrapper2{
         font-size: 23px;
         line-height: -1.5
     }
     .list{
-
         margin-left: 200px;
     }
+
+    input#submit{
+        width: 25%;
+        margin-left: 30%;
+
+    }
+
+    #name{
+        width: 70%;
+        margin: 0%;
+    }
+
+    
 }
